--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UpdateBloodList"></activity>
+        <activity android:name=".viewRequestBlood"></activity>
+        <activity android:name=".up_Details" />
+        <activity android:name=".show_Details" />
+        <activity android:name=".NeedHelp" />
+        <activity android:name=".Retrieve_Hos" />
+        <activity android:name=".Add_ReqBlood" />
+        <activity android:name=".UpdateBloodList" />
         <activity android:name=".List1" />
         <activity android:name=".List" />
         <activity android:name=".HospitalFirst" />
