--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.basgeekball:awesome-validation:4.2'
 
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+   // implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:6.2.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     androidTestImplementation "androidx.test:rules:1.1.0"
     androidTestImplementation "androidx.test:runner:1.1.0"
     androidTestImplementation "androidx.test:core:1.1.0"
